--- a/src/templates/settings/general.twig
+++ b/src/templates/settings/general.twig
@@ -1,8 +1,8 @@
 {% import "_includes/forms" as forms %}
 
 {{ forms.textField({
-    label: "Plugin Name"|t('sprout-base'),
-    instructions: "Intuitive, human-readable plugin name for the end user."|t('sprout-base'),
+    label: "Plugin Name"|t('sprout-base-import'),
+    instructions: "Intuitive, human-readable plugin name for the end user."|t('sprout-base-import'),
     id: 'pluginNameOverride',
     name: 'pluginNameOverride',
     value: settings.pluginNameOverride,
