--- a/src/templates/settings/seed-defaults/entries/settings.twig
+++ b/src/templates/settings/seed-defaults/entries/settings.twig
@@ -1,8 +1,8 @@
 {% import "_includes/forms" as forms %}
 
 {{ forms.textField({
-    label: "Related Minimum"|t('sprout-base'),
-    instructions: "Minimum number of relations to generate."|t('sprout-base'),
+    label: "Related Minimum"|t('sprout-base-import'),
+    instructions: "Minimum number of relations to generate."|t('sprout-base-import'),
     name: 'fields[entries][relatedMin]',
     value: settings.relatedMin ?? null,
     placeholder: '1',
@@ -11,8 +11,8 @@
 }) }}
 
 {{ forms.textField({
-    label: "Related Maximum"|t('sprout-base'),
-    instructions: "Maximum number of relations to generate."|t('sprout-base'),
+    label: "Related Maximum"|t('sprout-base-import'),
+    instructions: "Maximum number of relations to generate."|t('sprout-base-import'),
     name: 'fields[entries][relatedMax]',
     value: settings.relatedMax ?? null,
     placeholder: '3',
