--- a/src/templates/settings/seed-defaults/number/settings.twig
+++ b/src/templates/settings/seed-defaults/number/settings.twig
@@ -2,8 +2,8 @@
 
 
 {{ forms.textField({
-    label: "Minimum"|t('sprout-base'),
-    instructions: "Minimum number to generate."|t('sprout-base'),
+    label: "Minimum"|t('sprout-base-import'),
+    instructions: "Minimum number to generate."|t('sprout-base-import'),
     name: 'fields[number][min]',
     value: settings.min ?? null,
     placeholder: '0',
@@ -12,8 +12,8 @@
 }) }}
 
 {{ forms.textField({
-    label: "Maximum"|t('sprout-base'),
-    instructions: "Maximum number to generate."|t('sprout-base'),
+    label: "Maximum"|t('sprout-base-import'),
+    instructions: "Maximum number to generate."|t('sprout-base-import'),
     name: 'fields[number][max]',
     value: settings.max ?? null,
     placeholder: '100',
@@ -22,8 +22,8 @@
 }) }}
 
 {{ forms.textField({
-    label: "Number of Decimals"|t('sprout-base'),
-    instructions: "Number of decimals to generate."|t('sprout-base'),
+    label: "Number of Decimals"|t('sprout-base-import'),
+    instructions: "Number of decimals to generate."|t('sprout-base-import'),
     name: 'fields[number][decimals]',
     value: settings.decimals ?? null,
     placeholder: '0',
