--- a/src/templates/weed/index.twig
+++ b/src/templates/weed/index.twig
@@ -2,7 +2,7 @@
 {% import "_includes/forms" as forms %}
 {% import 'sprout-base/_includes/sproutcp' as sproutCore %}
 
-{% set title = 'Weed'|t('sprout-base') %}
+{% set title = 'Weed'|t('sprout-base-import') %}
 
 {% set hasSeeds = craft.sproutImport.hasSeeds() %}
 {% do view.registerAssetBundle("barrelstrength\\sproutbase\\app\\import\\web\\assets\\import\\ImportAsset") %}
@@ -13,9 +13,9 @@
 
         <table class="weed data fullwidth">
             <tr>
-                <th class="date">{{ "Import Date"|t('sprout-base') }}</th>
-                <th class="seeds">{{ "Total"|t('sprout-base') }}</th>
-                <th class="type">{{ "Type"|t('sprout-base') }}</th>
+                <th class="date">{{ "Import Date"|t('sprout-base-import') }}</th>
+                <th class="seeds">{{ "Total"|t('sprout-base-import') }}</th>
+                <th class="type">{{ "Type"|t('sprout-base-import') }}</th>
                 <th class="options">&nbsp;</th>
             </tr>
 
@@ -66,7 +66,7 @@
 
         {{ sproutCore.mediaBox({
             resourcePath: '@sproutbase/web/assets/cp/dist/images/sprout-icon.svg',
-            heading: "The garden is weeded"|t('sprout-base'),
+            heading: "The garden is weeded"|t('sprout-base-import'),
             body: "Currently, no content or settings in your database are marked as seed content. Get started and <a href='{importLink}'>import content and settings</a> or <a href='{seedLink}'>generate seed content</a>."|t({
                 importLink: cpUrl('sprout-import/index'),
                 seedLink: cpUrl('sprout-import/seed')
@@ -81,15 +81,15 @@
 
     <div class="meta">
 
-        <h2>{{ "Managing seed data"|t('sprout-base') }}</h2>
+        <h2>{{ "Managing seed data"|t('sprout-base-import') }}</h2>
 
-        <p>{{ "This page lists all content and settings that have been imported into your database and marked as seed data. When seed data exists, you can choose to keep or remove this data."|t('sprout-base') }}</p>
+        <p>{{ "This page lists all content and settings that have been imported into your database and marked as seed data. When seed data exists, you can choose to keep or remove this data."|t('sprout-base-import') }}</p>
 
-        <h6>{{ "Weed"|t('sprout-base') }}</h6>
-        <p class="first">{{ "Select weed to remove all imported content or settings of a particular type."|t('sprout-base')|raw }}</p>
+        <h6>{{ "Weed"|t('sprout-base-import') }}</h6>
+        <p class="first">{{ "Select weed to remove all imported content or settings of a particular type."|t('sprout-base-import')|raw }}</p>
 
-        <h6>{{ "Keep"|t('sprout-base') }}</h6>
-        <p class="first">{{ "Select keep to unmark seed data and continue to manage it as permanent content and settings in Craft."|t('sprout-base')|raw }}</p>
+        <h6>{{ "Keep"|t('sprout-base-import') }}</h6>
+        <p class="first">{{ "Select keep to unmark seed data and continue to manage it as permanent content and settings in Craft."|t('sprout-base-import')|raw }}</p>
 
     </div>
 
