Improves permission support

--- a/src/templates/settings/seed-defaults/index.twig
+++ b/src/templates/settings/seed-defaults/index.twig
@@ -1,3 +1,5 @@
+{% requireAdmin %}
+
 {% import "_includes/forms" as forms %}
 
 {% set fieldImporters = craft.sproutImport.getSproutImportFieldImporters() %}
