--- a/src/templates/settings/seo.twig
+++ b/src/templates/settings/seo.twig
@@ -1,5 +1,6 @@
-{% import "_includes/forms" as forms %}
+{% requireAdmin %}
 
+{% import "_includes/forms" as forms %}
 
 <form method="post" accept-charset="UTF-8" data-saveshortcut
       data-confirm-unload>
