--- a/src/templates/seed/index.twig
+++ b/src/templates/seed/index.twig
@@ -1,3 +1,5 @@
+{% requirePermission 'sproutImport-generateSeeds' %}
+
 {% extends "sprout-base-import/_layouts/base" %}
 {% import "_includes/forms" as forms %}
 {% import 'sprout-base/_includes/sproutcp' as sprout %}
