--- a/src/templates/weed/index.twig
+++ b/src/templates/weed/index.twig
@@ -1,3 +1,5 @@
+{% requirePermission 'sproutImport-removeSeeds' %}
+
 {% extends "sprout-base-import/_layouts/base" %}
 {% import "_includes/forms" as forms %}
 {% import 'sprout-base/_includes/sproutcp' as sproutCore %}
